[tool.poetry]
name = "llm_load_test"
version = "0.1.0"
description = ""
authors = ["Wesley Spinks <wspinks@redhat.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
caikit-nlp-client = "^0.0.8"
pandas = "*"
pyyaml = "*"
pylint = "*"
numpy = "*"
flask = "*"
matplotlib = "*"
python-dotenv = "*"
gunicorn = "*"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
